# vikunja-mcp

./: .env  .env.example  .gitignore  DEPLOYMENT.md  ISSUES.md  PROGRESS.md  README.md  config.json.example  install.sh  pyproject.toml  pytest.ini  requirements.txt  setup-credentials.sh
.claude/: ISSUES.md
.claude-plugin/: plugin.json
.claude-plugin/commands/: setup.md
specs/archive/: BLUEPRINT-project-vikunja-mcp-20251216.yaml
src/: __init__.py  server.py
src/client/: vikunja_client.py
src/schemas/: advanced_schemas.py  project_schemas.py  task_schemas.py
src/tools/: advanced.py  labels.py  projects.py  tasks.py
src/utils/: __init__.py  errors.py  formatters.py  openbao_secrets.py  pagination.py
tests/: __init__.py  evaluations.jsonl  test_client.py  test_create_task.py  test_error_message.py  test_new_pattern.py  test_schemas.py  test_tools.py  test_utils.py
