[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vikunja-mcp"
version = "1.1.0"
description = "Vikunja task management MCP server for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Samuel Rodda", email = "samuel@arcforge.au" }
]
keywords = ["vikunja", "mcp", "claude", "tasks", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
vikunja-mcp = "src.server:main"

[project.urls]
Homepage = "https://github.com/IAMSamuelRodda/vikunja-mcp"
Repository = "https://github.com/IAMSamuelRodda/vikunja-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src"]
